package com.tetras;

public class Body implements IAffiche{

    String content  ="";

    @Override
    public String afficher() {
        
        return content;

    }


}
